src/resources/postcss/tribe-common-admin.pcss
/* ... */
.tribe-events-admin-extensions-card {
	border: 1px solid #e1e1e4;
	border-radius: 20px;
	border-top: 8px solid #334aff;
	padding: 48px 35px 24px 25px;
}

.tribe-events-admin-extensions-card__title {
	font-size: 20px;
	margin: 0;
}

.tribe-events-admin-extensions-card__title a {
	color: #0f1031;
	font-family: Helvetica;
	font-size: 20px;
	font-weight: bold;
	line-height: 1.2;
	text-decoration: none;

	&:hover,
	&:active,
	&:focus {
		box-shadow: none;
		color: #334aff;
	}
}

.tribe-events-admin-extensions-card__description {
	color: #0f1031;
	font-family: Helvetica;
	font-size: 14px;
	line-height: 1.43;
	margin: 20px 0;
}

.tribe-events-admin-cta {
	align-items: center;
	border: 1px solid #e1e1e4;
	border-radius: 20px;
	display: flex;
	justify-content: space-between;
	margin: 60px 0;

	@media screen and (max-width: 768px) {
		align-items: flex-start;
		flex-direction: column;
		overflow: hidden;
	}
}

.tribe-events-admin-cta__image {
	height: 152px;
	object-fit: contain;
	width: auto;

	@media screen and (max-width: 480px) {
		height: auto;
		width: 90%;
	}
}

.tribe-events-admin-cta__content {
	align-items: center;
	display: flex;
	flex-direction: column;
	justify-content: center;
	padding: 20px 0;
	width: 100%;

	@media screen and (max-width: 480px) {
		align-items: flex-start;
		padding: 32px 23px 45px;
		width: auto;
	}
}

.tribe-events-admin__troubleshooting-cta {
	align-items: center;
	display: flex;
	flex-direction: column;
	justify-content: center;
	padding: 20px 0;
	width: 100%;

	@media screen and (max-width: 480px) {
		align-items: flex-start;
		padding: 32px 23px 45px;
		width: auto;
	}
}

.tribe-events-admin-cta__content-title {
	color: #0f1031;
	font-size: 28px;
	font-weight: bold;
	line-height: normal;
	margin: 0 0 10px 0;
	text-align: center;

	@media screen and (max-width: 1080px) {
		font-size: 24px;
	}

	@media screen and (max-width: 480px) {
		font-size: 22px;
		text-align: left;
	}
}

.tribe-events-admin-cta__content-subtitle {
	color: #0f1031;
	font-size: 16px;
	line-height: 1.5;
	margin-bottom: 10px;
	text-align: center;

	@media screen and (max-width: 480px) {
		text-align: left;
	}
}

.tribe-events-admin-cta__content-description a {
	border-bottom: 2px solid #334aff;
	color: #334aff;
	font-size: 16px;
	font-weight: bold;
	padding-bottom: 2px;
	text-decoration: none;

	&:focus {
		box-shadow: none;
		outline: none;
	}

	&:hover {
		border-bottom: 2px solid #1c39bb;
		color: #1c39bb;
	}
}

.tribe-events-admin-footer-logo {
	display: inline-block;
	vertical-align: middle;
	width: 228px;

	@media screen and (max-width: 768px) {
		width: 225px;
	}

	@media screen and (max-width: 480px) {
		width: 210px;
	}
}

/* first steps section */

.tribe-events-admin-step {
	margin: 10px 0 0;
}

.tribe-events-admin-step-card {
	border: 1px solid #e1e1e4;
	border-radius: 20px;
	display: flex;
	justify-content: space-between;
	padding: 24px 15px 19px 19px;
}

.tribe-events-admin-step-card a {
	border-bottom: 2px solid #334aff;
	color: #334aff;
	padding-bottom: 2px;
	text-decoration: none;

	&:focus {
		box-shadow: none;
		outline: none;
	}

	&:hover {
		border-bottom: 2px solid #1c39bb;
		color: #1c39bb;
	}
}

.tribe-events-admin-step-card__icon img {
	height: 43px;
	margin-right: 5px;
	width: 42px;
}

.tribe-events-admin-step-card__content {
	margin-left: 10px;
}

.tribe-events-admin-step__title {
	color: #0f1031;
	font-size: 20px;
	font-weight: bold;
	line-height: 1.2;
	margin-bottom: 10px;
}

.tribe-events-admin-step__answer {
	color: #0f1031;
	font-size: 13px;
	margin-top: 18px;
}

.tribe-events-admin__system-information {
	display: grid;
	gap: 15px 30px;
	grid-template-areas: ". .";
	grid-template-columns: repeat(2, minmax(0, 1fr));
	grid-template-rows: 1fr;
	margin: 100px 0;
	position: relative;

	@media screen and (max-width: 768px) {
		grid-template-areas: ".";
		grid-template-columns: repeat(1, minmax(0, 1fr));
		margin: 50px 0;
	}

	@media screen and (max-width: 480px) {
		grid-template-areas: ".";
		grid-template-columns: repeat(1, minmax(0, 1fr));
		margin: 50px 0;
	}
}

.tribe-events-admin__troubleshooting-title {
	color: #0f1031;
	font-size: 28px;
	font-weight: bold;
	line-height: 1;
	margin: 0;
}

.tribe-events-admin__troubleshooting-description {
	color: #0f1031;
	font-size: 18px;
	line-height: 1.2;
	line-height: 1.44;
	margin: 20px 0;
}

.tribe-events-admin__system-information-select {
	display: flex;
	margin: 30px 0 20px;
}

.tribe-events-admin__system-information-select input[type="checkbox"] {
	margin: 0 10px 0 0;
}

.tribe-events-admin__system-information-select label {
	color: #0f1031;
	font-size: 16px;
	line-height: 1.2;
}

.tribe-events-admin__system-information-content small {
	color: #0f1031;
	font-size: 12px;
	line-height: 1.2;
}

.tribe-events-admin__system-information-widget,
.tribe-events-admin__recent-template-changes .template-updates-wrapper {
	background: #0f1031;
	border-radius: 16px;
	color: #fff;
	font-size: 14px;
	line-height: 1.14;
	max-height: 280px;
	overflow: scroll;
	-ms-overflow-style: none;  /* hide scrollbar on IE and Edge */
	padding: 12px 0 0 27px;
	scrollbar-width: none;  /* hide scrollbar on Firefox */
}

.tribe-events-admin__system-information-widget a {
	color: #334aff;

	&:hover {
		opacity: 0.8;
	}
}

.tribe-events-admin__recent-template-changes .template-updates-wrapper {
	padding: 30px 0 30px 27px;
}

.tribe-events-admin__system-information-widget::-webkit-scrollbar,
.tribe-events-admin__recent-template-changes .template-updates-wrapper::-webkit-scrollbar {
	display: none; /* hide scrollbar on Chrome */
}

.tribe-events-admin__system-information-widget-copy {
	bottom: 10px;
	position: absolute;

	@media only screen and (max-width: 1920px) {
		right: 20.5vw;
	}

	@media only screen and (max-width: 1280px) {
		right: 22vw;
	}

	@media only screen and (max-width: 768px) {
		left: 10px;
		right: auto;
	}

	@media only screen and (max-width: 480px) {
		left: 10px;
		right: auto;
	}
}
/* ... */

